# g4b

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
g4b/: __init__.py  __main__.py  _torch_stub.py  chat.html  config.py  device.py  gguf.py  interaction_generator.py  lifecycle.py  protocol.py  scheduler.py  serve.py  tensor.py  tokenizer.cpp  tokenizer.py  utils.py
g4b/kernels/: __init__.py  add.py  add_kv_to_cache.py  advance_decode_state.py  elementwise_ops.py  embeddings.py  fa2.py  geglu.py  increment.py  matmul.py  matmul_epilogue.py  memset.py  rmsnorm.py  rope.py  rsos.py  sample_logits.py  select_t.py  update_residual_stream.py  utils.py
g4b/models/: __init__.py  gemma4e.py  model.py
scripts/: dump_gguf.py  openai_ws_proxy.py  profile.sh  reference_impl.py
tests/: test_api.py  test_generation_divergence.py  test_protocol.py  test_tokenizer.py
tests/compare_scripts/: bench_tokenizer.py  dequant_test.py  matmul2_test.py  matmul_matvec_test.py  matmul_quantized_test.py  matmul_test.py  test_add_kv.py  test_elementwise_ops.py  test_embed.py  test_fa2.py  test_increment.py  test_matmul_epilogue.py  test_memset.py  test_ple.py  test_rmsnorm.py  test_rope.py  test_rsos.py  test_sample_logits.py  test_ursrsos.py
