[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"


[project]
name = "g4b"
version = "0.1.0"
description = "Gemma 4 Inference Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "barnii77", email = "barnii77@barnii77.dev" }
]

dependencies = [
    "triton==3.7.0",
    "cuda-core[cu13]==1.0.1",
]


[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "torch==2.12.0+cu130",
    "numpy==2.4.6",
]


[tool.setuptools.packages.find]
where = ["g4b"]


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''
